All_Component_DX/force-app/main/default/objects/SPM_Down_Time_Detail__c/SPM_Down_Time_Detail__c.object-meta.xml
<CustomObject>
    <description>This object is to hold the down-time details of the IB under the contracts</description>
    <label>SPM Down Time Detail</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Down Time Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>