All_Component_DX/force-app/main/default/objects/SPM_Down_Time_Detail__c/fields/Down_On__c.field-meta.xml
<CustomField>
    <fullName>Down_On__c</fullName>
    <description>This field is used capture the date on which the system went down</description>
    <label>Down On</label>
    <type>Date</type>
</CustomField>