All_Component_DX/force-app/main/default/objects/SPM_Down_Time_Detail__c/fields/Down_Time__c.field-meta.xml
<CustomField>
    <fullName>Down_Time__c</fullName>
    <description>This field is used capture the time in minutes when system is down</description>
    <label>Down Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>