All_Component_DX/force-app/main/default/objects/SPM_Down_Time_Detail__c/fields/Up_Time_Detail__c.field-meta.xml
<CustomField>
    <fullName>Up_Time_Detail__c</fullName>
    <description>Master-Detail relationship to Contract Up Time</description>
    <label>SPM Up Time Detail</label>
    <referenceTo>SPM_Contract_Up_Time__c</referenceTo>
    <relationshipLabel>SPM Down Time Details</relationshipLabel>
    <relationshipName>SPM_Down_Time_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>