All_Component_DX/force-app/main/default/objects/SPM_Down_Time_Detail__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Work Order.</description>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>SPM Down Time Details</relationshipLabel>
    <relationshipName>SPM_Down_Time_Details</relationshipName>
    <type>Lookup</type>
</CustomField>